--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/state.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/state.phtml
@@ -33,7 +33,7 @@ $selectedSort = $block->getData('selected_sort') ?? [];
 
     <div class="flex md:flex-wrap gap-3 max-md:overflow-x-scroll max-md:pb-4 max-md:pt-2">
         <!-- Remove all on mobile -->
-        <?php if($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
+        <?php if ($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
             <a
                 aria-label="<?= $escaper->escapeHtmlAttr(__('Clear All')) ?>"
                 class="md:hidden button min-w-[44px] px-0 text-xl button--filled-primary opacity-100 h-[44px]"
@@ -43,9 +43,9 @@ $selectedSort = $block->getData('selected_sort') ?? [];
             </a>
         <?php endif; ?>
 
-        <?php if($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
+        <?php if ($block->getLayer()->getState()->getFilters() || count($selectedSort)): ?>
             <!-- Selected sort -->
-            <?php if(count($selectedSort)): ?>
+            <?php if (count($selectedSort)): ?>
                 <a
                     @click="removeSort()"
                     class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
@@ -58,18 +58,40 @@ $selectedSort = $block->getData('selected_sort') ?? [];
 
             <?php foreach ($filters as $filter): ?>
                 <?php
-                    $filterName = $filter->getName();
-                    $filterLabel = $block->stripTags($filter->getLabel());
+                $filterName = $filter->getName();
+                $filterLabel = $block->stripTags($filter->getLabel());
                 ?>
-                <a
-                    href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
-                    class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
-                    title="<?= $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
-                    x-element-transition-trigger
-                >
-                    <span class="mr-2"><?= $escaper->escapeHtml(__($filterName)) ?>:</span>
-                    <span><?= $escaper->escapeHtml($filterLabel) ?></span>
-                </a>
+                <?php if ($filterName !== 'Price'): ?>
+                    <a
+                        href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
+                        class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
+                        title="<?= $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
+                        x-element-transition-trigger
+                    >
+                        <span class="mr-2"><?= $escaper->escapeHtml(__($filterName)) ?>:</span>
+                        <span><?= $escaper->escapeHtml($filterLabel) ?></span>
+                    </a>
+                <?php else: ?>
+                    <button
+                        x-show="minPrice"
+                        href="<?= $escaper->escapeUrl($filter->getRemoveUrl()) ?>"
+                        class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
+                        title="<?= $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
+                        x-element-transition-trigger
+                    >
+                        <span class="mr-2"><?= __('Price From:') ?></span>
+                        <span x-text="`$${minPrice}`"></span>
+                    </button>
+                    <button
+                        x-show="maxPrice && maxPrice !== 99"
+                        class="button button--outline-secondary button--size-sm shrink-0 max-md:h-[44px] max-md:text-base max-md:text-primary-600"
+                        title="<?= $escaper->escapeHtmlAttr(__('Remove active %1 filter: %2', $filterName, $filterLabel)) ?>"
+                        @click="applyPrice(minPrice, 99)"
+                    >
+                        <span class="mr-2"><?= __('Price To:') ?></span>
+                        <span x-text="`$${maxPrice}`"></span>
+                    </button>
+                <?php endif; ?>
             <?php endforeach; ?>
         <?php else: ?>
             <p class="pr-3 text-center md:pr-0 md:text-left max-md:hidden">
@@ -101,5 +123,6 @@ $selectedSort = $block->getData('selected_sort') ?? [];
             <?php endforeach; ?>
         </div>
     </div>
-    <div x-intersect:full="isTopFilterVisible = true" x-intersect:leave="isTopFilterVisible = false" x-morph-ignore></div>
+    <div x-intersect:full="isTopFilterVisible = true" x-intersect:leave="isTopFilterVisible = false"
+         x-morph-ignore></div>
 </div>
