--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -1,4 +1,29 @@
+@import "content-type/_product-card.style.less";
+@import "content-type/_slider.style.less";
 @import "content-type/_guarantees.style.less";
 @import "content-type/_image-with-text.style.less";
 @import "content-type/_image-banner.style.less";
 @import "content-type/_collage.style.less";
+@import "content-type/_category.style.less";
+
+.content-wrapper {
+  padding-left: 16px;
+  padding-right: 16px;
+  width: 100%;
+
+  @media (min-width: 640px) {
+    max-width: 640px;
+  }
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media (min-width: 1024px) {
+    max-width: 1024px;
+  }
+  @media (min-width: 1280px) {
+    max-width: 1280px;
+  }
+  @media (min-width: 1536px) {
+    max-width: 1536px;
+  }
+}
