--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -100,7 +100,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <?= $template->render('Magento_Theme::html/header/search/search-categories.phtml') ?>
     <?= $template->render('Magento_Theme::html/header/search/search-products.phtml') ?>
     <div
-      class="transition-opacity duration-300 md:sticky md:bottom-0 md:z-10 md:w-full md:rounded-b-md md:bg-bg-500 md:px-5 md:pb-5"
+      class="transition-opacity duration-300 md:sticky md:bottom-0 md:z-10 md:w-full md:rounded-b-md md:bg-bg-500"
       id="search-actions"
       x-show="!isLoading"
       x-transition.opacity
