--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -109,7 +109,7 @@ if ($product) {
             <img width="0" height="0" class="pointer-events-none invisible absolute hidden h-0 w-0 md:block"
                  src="<?= $escaper->escapeUrl($imageUrl) ?>" alt="">
 
-            <div class="relative overflow-hidden rounded-md bg-[--fade-in-bg] h-full" x-element-transition-src="img"
+            <div class="relative overflow-hidden rounded-md bg-[--fade-in-bg]" x-element-transition-src="img"
                  style="transform: translateZ(0)">
 
                 <?php if ($product): ?>
