INTERNAL-399; implement login/signup btn if user not logged in, and my account if logged in

--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_menu.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_menu.scss
@@ -13,7 +13,7 @@
   }
 
   &__level {
-    @apply absolute left-0 top-0 hidden w-full;
+    @apply absolute left-0 top-0 bottom-0 hidden w-full;
 
     @screen md {
       /* animate content to fade OUT */
