--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu-items.phtml
@@ -24,7 +24,9 @@ $menuItems = $block->getData('menuItems');
 $breadcrumbs = $block->getData('breadcrumbs') ?? [];
 $url = $block->getData('url');
 $level = $block->getData('level') ?? 1;
-
+$isLoggedIn = $block->getData('isLoggedIn');
+$accountUrl = $block->getData('accountUrl');
+$accountUrlText = $block->getData('accountUrlText');
 if (!$menuItems) {
   $menuItems = $viewModelNavigation->getNavigation(4);
   $block->setData('cache_tags', $viewModelNavigation->getIdentities());
@@ -178,6 +180,21 @@ if (!$menuItems) {
     </li>
     <?php endforeach; ?>
   </ul>
+
+  <div
+      class="w-full bg-bg-500 px-2 md:px-4 pb-2 md:w-[--menu-width] md:rounded-md md:pb-3 md:mt-8 absolute md:static bottom-[8px] right-0 left-0"
+      :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'menu' : !$store.resizable.isVisible('menu-desktop')"
+      x-show="!$store.main.isMobile || ($store.popup.currentPopup == 'menu' && history[history.length - 1] === 'all' && !getIsSearchActive())"
+  >
+    <a x-element-transition-trigger
+       href="<?= $accountUrl ?>"
+       class="button button--filled-primary w-full"
+       x-a11y-trap-target.end="$store.popup.currentPopup === 'menu' && history.length === 1"
+    >
+        <?= $block->escapeHtml($accountUrlText) ?>
+    </a>
+  </div>
+
   <?php if ($url && $id !== 'all'): ?>
   <template
     x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('menu-actions-<?= $id ?>')"
