--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/menu/menu.phtml
@@ -5,6 +5,10 @@ declare(strict_types=1);
 use Satoshi\Theme\Block\Template;
 
 /** @var Template $template */
+/** @var Template $block */
+$customerBlock = $block->getLayout()->createBlock(\Magento\Customer\Block\Account\Customer::class);
+$isLoggedIn = $customerBlock->customerLoggedIn();
+$accountUrl = $block->getUrl($isLoggedIn ? 'customer/account/index' : 'customer/account/login');
 ?>
 
 <nav
@@ -46,9 +50,12 @@ use Satoshi\Theme\Block\Template;
     <?=
       $template
         ->setData([
-          'id' => 'all',
-          'title' => 'All categories',
-          'path' => 'all'
+            'id' => 'all',
+            'title' => 'All categories',
+            'path' => 'all',
+            'isLoggedIn' => $isLoggedIn,
+            'accountUrl' => $accountUrl,
+            'accountUrlText' => $isLoggedIn ? __('My account') : __('Login / Signup'),
         ])
         ->render('Magento_Theme::html/header/menu/menu-items.phtml')
     ?>
