INTERNAL-402; fix Register import namespace

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -5,7 +5,7 @@ declare(strict_types=1);
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\Customer\CreateAccountButton;
 use Hyva\Theme\ViewModel\ReCaptcha;
-use Satoshi\Theme\Block\Form\Register;
+use Satoshi\Customer\Block\Form\Register;
 use Magento\Customer\Block\Widget\Dob;
 use Magento\Customer\Block\Widget\Gender;
 use Magento\Customer\Block\Widget\Name as NameWidget;
