INTERNAL-402; fix font-size in form validation

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -170,11 +170,10 @@ $errorMessage = $block->getErrorMessage();
                         />
                         <div
                             id="password-strength-meter-container"
-                            class="mt-2 text-sm"
                             data-role="password-strength-meter"
                             aria-live="polite"
                         >
-                            <div id="password-strength-meter" class="password-strength-meter">
+                          <div id="password-strength-meter" class="password-strength-meter mt-2 text-[14px]">
                                 <?= $escaper->escapeHtml(__('Password Strength')) ?>:
                                 <span
                                     id="password-strength-meter-label"
