--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/gallery.phtml
@@ -32,10 +32,7 @@ if (!empty($images) && empty($mainImage)) {
 
 /** @var Image $helper */
 $helper = $block->getData('imageHelper');
-$mainImageUrl = $mainImage ?
-    $mainImage->getData('medium_image_url') :
-    $helper->getDefaultPlaceholderUrl('image');
-
+$mainImageUrl = $mainImage ? $mainImage->getData('medium_image_url') : $helper->getDefaultPlaceholderUrl('image');
 
 $isContain = false;
 $mixBackground = true;
@@ -43,8 +40,63 @@ $productName = $block->getProduct()->getName();
 ?>
 
 <div class="flex w-full flex-col gap-4 md:grid md:grid-cols-[repeat(auto-fit,1fr)] md:gap-5 md:pb-7 lg:grid-cols-[repeat(auto-fit,minmax(300px,1fr))] max-md:-mt-8">
+    <!-- Appended variant images  -->
+    <template x-for="(image, index) in appendedImages" :key="index">
+        <div class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl">
+            <div class="flex items-center justify-center size-full bg-[--fade-in-bg] <?= $isContain ? 'p-[4%]' : '' ?>">
+                <img
+                    :alt="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                    :title="image.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                    class="object-center <?= $mixBackground ? 'mix-blend-darken' : '' ?> <?= $isContain ? 'object-contain rounded-2xl max-h-full w-auto' : 'object-cover size-full' ?>"
+                    :src="image.img"
+                />
+
+                <!-- Play button -->
+                <button
+                    x-show="image.type === 'video'"
+                    type="button"
+                    class="group absolute inset-0 grid place-items-center"
+                    aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                    @click="activateVideo(image.position)"
+                    @keydown.enter="activateVideo(image.position)"
+                    x-cloak
+                >
+                    <?= $heroiconsSolid->playHtml(
+                        'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                        44,
+                        44,
+                        ['aria-hidden' => 'true']
+                    ); ?>
+                </button>
+
+                <!-- Youtube container -->
+                <div class="absolute inset-0 hidden size-full bg-bg-400"
+                    :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                    x-transition.opacity.duration.500ms
+                    x-show="image.type === 'video' && activeVideoType === 'youtube'"
+                >
+                    <div :id="`youtube-player-${image.position}`" class="size-full"></div>
+                </div>
+
+                <!-- Video container -->
+                <div class="absolute inset-0 hidden size-full bg-bg-400"
+                    :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                    x-transition.opacity.duration.500ms
+                    x-show="image.type === 'video' && activeVideoType === 'vimeo'"
+                >
+                    <div :id="`vimeo-player-${image.position}`" class="size-full"></div>
+                </div>
+            </div>
+        </div>
+    </template>
+
     <!-- Main image with anti blinking -->
-    <div class="relative flex aspect-product flex-shrink-0 items-center justify-center overflow-hidden bg-[--fade-in-bg] md:rounded-2xl max-md:hidden">
+    <div
+        class="relative flex aspect-product flex-shrink-0 items-center justify-center overflow-hidden bg-[--fade-in-bg] md:rounded-2xl max-md:hidden"
+        :class="{
+            'max-md:hidden': !mobileFeaturedImage,
+        }"
+    >
         <div
             x-data="
                 TransitionImage({
