--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -70,7 +70,7 @@ if ($product) {
     >
         <!-- Mobile main image -->
         <div class="mb-4 md:hidden">
-            <div class="relative flex aspect-product min-h-0 justify-center bg-[--fade-in-bg]">
+            <div class="relative flex aspect-product min-h-0 justify-center bg-[--fade-in-bg]" :class="{'hidden': mobileFeaturedImage}">
                 <div
                     class="hide-unless-transition absolute inset-0 z-10 flex items-center justify-center transition-opacity delay-1000 duration-300 bg-[--fade-in-bg]"
                     x-data="TransitionImage({
@@ -118,7 +118,7 @@ if ($product) {
                                     ['aria-hidden' => 'true']
                                 ); ?>
                             </button>
-        
+
                             <!-- Youtube container -->
                             <div class="absolute inset-0 hidden size-full bg-white"
                                 :class="{ 'hidden': activeVideoType !== 'youtube' }"
@@ -127,7 +127,7 @@ if ($product) {
                             >
                                 <div id="youtube-player-<?= $mainImage->getData('position') ?>" class="size-full"></div>
                             </div>
-        
+
                             <!-- Video container -->
                             <div class="absolute inset-0 hidden size-full bg-white"
                                 :class="{ 'hidden': activeVideoType !== 'vimeo' }"
@@ -139,8 +139,58 @@ if ($product) {
                         </div>
                     </template>
                 <?php endif; ?>
-
             </div>
+
+            <template x-if="mobileFeaturedImage">
+                <div class="relative flex aspect-product min-h-0 justify-center bg-[--fade-in-bg]">
+                    <div class="animate-on-transition relative aspect-product flex-shrink-0 overflow-hidden border-black md:rounded-2xl">
+                        <div class="flex items-center justify-center size-full bg-[--fade-in-bg]">
+                            <img
+                                :alt="mobileFeaturedImage.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                                :title="mobileFeaturedImage.caption || '<?= $escaper->escapeJs($productName) ?>'"
+                                class="object-center object-cover size-full mix-blend-darken"
+                                :src="mobileFeaturedImage.img"
+                            />
+
+                            <!-- Play button -->
+                            <button
+                                x-show="mobileFeaturedImage.type === 'video'"
+                                type="button"
+                                class="group absolute inset-0 grid place-items-center"
+                                aria-label="<?= $escaper->escapeHtmlAttr(__('Play video')) ?>"
+                                @click="activateVideo(mobileFeaturedImage.position)"
+                                @keydown.enter="activateVideo(mobileFeaturedImage.position)"
+                                x-cloak
+                            >
+                                <?= $heroiconsSolid->playHtml(
+                                    'stroke-white/75 fill-black/20 transition ease-in group-hover:scale-110 md:w-24 md:h-24',
+                                    44,
+                                    44,
+                                    ['aria-hidden' => 'true']
+                                ); ?>
+                            </button>
+
+                            <!-- Youtube container -->
+                            <div class="absolute inset-0 hidden size-full bg-bg-400"
+                                :class="{ 'hidden': activeVideoType !== 'youtube' }"
+                                x-transition.opacity.duration.500ms
+                                x-show="mobileFeaturedImage.type === 'video' && activeVideoType === 'youtube'"
+                            >
+                                <div :id="`youtube-player-${mobileFeaturedImage.position}`" class="size-full"></div>
+                            </div>
+
+                            <!-- Video container -->
+                            <div class="absolute inset-0 hidden size-full bg-bg-400"
+                                :class="{ 'hidden': activeVideoType !== 'vimeo' }"
+                                x-transition.opacity.duration.500ms
+                                x-show="mobileFeaturedImage.type === 'video' && activeVideoType === 'vimeo'"
+                            >
+                                <div :id="`vimeo-player-${mobileFeaturedImage.position}`" class="size-full"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </template>
         </div>
         <?= $block->getChildHtml('product.details.info') ?>
     </div>
