--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/head/head-styles.phtml
@@ -80,7 +80,7 @@
   --progress-bar-color: #29d;
   --progress-bar-height: 2px;
 
-    --fade-in-bg: #ffffff;
+  --fade-in-bg: #F3F3F3;
 
   --color-primary-50: #d4dad2;
   --color-primary-100: #9eab9b;
