INTERNAL-402; show_address_fields in register form

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_create.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/layout/customer_account_create.xml
@@ -4,6 +4,12 @@
         <referenceBlock name="page.main.title" remove="true" />
         <referenceContainer name="customer.login.container" htmlClass="container mx-auto flex h-full items-center px-5" />
 
+        <referenceBlock name="customer_form_register">
+            <arguments>
+                <argument name="show_address_fields" xsi:type="boolean">true</argument>
+            </arguments>
+        </referenceBlock>
+
         <referenceBlock name="breadcrumbs">
             <action method="addCrumb">
                 <argument name="crumbName" xsi:type="string">home</argument>
