--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/templates/advanced/form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/templates/advanced/form.phtml
@@ -20,8 +20,8 @@ $maxQueryLength = $catalogSearchHelper->getMaxQueryLength();
 
     <form method="get"
           action="<?= $escaper->escapeUrl($block->getSearchPostUrl()) ?>"
+          x-data="Form"
           @submit.prevent="submitForm"
-          x-data="AdvancedSearch"
     >
       <div class="flex flex-col gap-3">
           <?php foreach ($block->getSearchableAttributes() as $attribute): ?>
