INTERNAL-370; use 4 indent for phtml file

--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/item/column/remove.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/item/column/remove.phtml
@@ -23,7 +23,8 @@ $product = $item->getProduct();
 <a
     href="#"
     data-role="remove"
-    @click.prevent='postFormWithRedirect(<?= /* @noEscape */ $block->getItemRemoveParams($block->getItem()) ?>)'
+    @click.prevent='postFormWithRedirect(<?= /* @noEscape */
+    $block->getItemRemoveParams($block->getItem()) ?>)'
     title="<?= $escaper->escapeHtmlAttr(__('Remove Item')) ?>"
     class="button button--outline-primary w-11 md:w-12 p-0"
 >
