--- a/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/item/column/price.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Wishlist/templates/item/column/price.phtml
@@ -11,8 +11,9 @@ $product = $item->getProduct();
 
 <div class="flex justify-between items-center mb-5 [&_.price]:text-text-500 [&_.price]:text-lg [&_.price]:font-bold">
     <?php foreach ($block->getChildNames() as $childName): ?>
-        <?= /* @noEscape */ $block->getLayout()->renderElement($childName, false) ?>
-    <?php endforeach;?>
+        <?= /* @noEscape */
+        $block->getLayout()->renderElement($childName, false) ?>
+    <?php endforeach; ?>
 
     <?php if ($item->canHaveQty() && $product->isVisibleInSiteVisibility()): ?>
         <label
@@ -30,7 +31,8 @@ $product = $item->getProduct();
             data-product-sku="<?= $escaper->escapeHtmlAttr($product->getSku()) ?>"
             id="qty[<?= $escaper->escapeHtmlAttr($item->getId()) ?>]"
             name="qty[<?= $escaper->escapeHtmlAttr($item->getId()) ?>]"
-            value="<?= /* @noEscape */ $block->getAddToCartQty($item) * 1 ?>"
+            value="<?= /* @noEscape */
+            $block->getAddToCartQty($item) * 1 ?>"
             class="input__field input__field--outline px-5 py-2.5 border-bg-600 placeholder:text-border-color w-20"
             <?= $product->isSaleable() ? '' : 'disabled' ?>
         >
